<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">

    <View
        android:id="@+id/header"
        style="@style/TopBottom"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/header"
        app:tint="@color/off_white" />

    <TextView
        android:id="@+id/title"
        style="@style/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/off_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/menu_image"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/header"
        app:tint="@color/off_white" />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/movie_title"
        style="@style/Titles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster"
        tools:text="Movie Title" />

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        tools:text="Genre" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_genre"
        tools:text="0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_end"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/movie_rating"
        app:layout_constraintTop_toBottomOf="@id/movie_genre" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_rating">

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed iaculis sapien eget nulla ultricies, id placerat risus commodo. In tincidunt, magna non condimentum tincidunt, ante est lacinia lectus, vitae sollicitudin lorem quam eget neque. Quisque et accumsan purus. Praesent lobortis risus quis pretium luctus." />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>